--- a/style.scss
+++ b/style.scss
@@ -68,3 +68,47 @@ header {
         }
     }
 }
+
+main {
+    background-color: #0000007d;
+    section {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+        .left-hero {
+            color: white;
+            padding: 5rem 0;
+            h2 {
+                color: white;
+                font-size: 4rem;
+                font-weight: 600;
+                span {
+                    background: linear-gradient(180deg, #C56CD6 0%, #3425AF 100%);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+            p {
+                font-weight: 200;
+                font-size: 1.6rem;
+                padding: 1rem 0;
+            }
+            .expo-create {
+                button {
+                    outline: none;
+                    background: transparent;
+                    border: 2px solid #5142fb;
+                    border-radius: 2rem;
+                    padding: 0.6rem 2.4rem;
+                    color: white;
+                    font-family: inherit;
+                    font-size: 1.3rem;
+                }
+            }
+        }
+    }
+}
