--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,12 @@
+//variables
+$width:1280px;
 //custom
 header {
     background: linear-gradient(135deg, #2a3856 0%, #1d031e 100%);
-    height: 5rem;
+    height: 7rem;
     border-bottom: 2px solid #c1c1c19c;
     #container {
-        width: 90%;
+        width: $width;
         margin: 0 auto;
         height: 100%;
         .upMenu {
@@ -23,8 +25,8 @@ header {
                             padding: 0 1rem;
                             text-decoration: none;
                             color: #f5f5f5;
-                            font-weight: 600;
-                            font-size: 1.2rem;
+                            font-weight: 400;
+                            font-size: 2rem;
                             i {
                                 padding: 0 0 0 0.2rem;
                             }
@@ -33,7 +35,7 @@ header {
                 }
             }
             .search-wallet {
-                font-size: 1rem;
+                font-size: 2rem;
                 >i {
                     color: white;
                     margin-right: 1rem;
@@ -46,7 +48,8 @@ header {
                     padding: 0.6rem 1.4rem;
                     color: white;
                     font-family: inherit;
-                    font-size: 1rem;
+                    font-size: 1.6rem;
+                    cursor: pointer;
                     i {
                         margin-right: 1rem;
                     }
@@ -59,11 +62,13 @@ header {
                     outline: none;
                     padding: 0.3rem;
                     border-radius: 0.4rem;
-                    color: white
+                    color: white;
+                    font-size: 1.9rem;
+                    cursor: pointer;
                 }
             }
             img {
-                width: 8rem;
+                width: 14rem;
             }
         }
     }
@@ -71,20 +76,21 @@ header {
 
 main {
     background-color: #0000007d;
-    section {
-        width: 90%;
+    section#hero {
+        width: $width;
         margin: 0 auto;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
         justify-content: space-between;
         align-items: center;
+        padding: 6rem 0;
         .left-hero {
             color: white;
             padding: 5rem 0;
             h2 {
                 color: white;
-                font-size: 4rem;
+                font-size: 7rem;
                 font-weight: 600;
                 span {
                     background: linear-gradient(180deg, #C56CD6 0%, #3425AF 100%);
@@ -94,8 +100,8 @@ main {
             }
             p {
                 font-weight: 200;
-                font-size: 1.6rem;
-                padding: 1rem 0;
+                font-size: 2rem;
+                padding: 2rem 0;
             }
             .expo-create {
                 button {
@@ -106,7 +112,236 @@ main {
                     padding: 0.6rem 2.4rem;
                     color: white;
                     font-family: inherit;
-                    font-size: 1.3rem;
+                    font-size: 1.9rem;
+                    cursor: pointer;
+                }
+            }
+        }
+        .right-hero {
+            img {
+                width: 80%;
+                animation: axies-hero 2s infinite
+            }
+        }
+    }
+    section#our-service {
+        width: $width;
+        margin: 3rem auto;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center;
+        div {
+            color: white;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+            padding: 0 1rem;
+            p {
+                text-align: center;
+                font-weight: 200;
+                padding: 0 0 3rem 0;
+                font-size: 1.6rem;
+            }
+            i {
+                font-size: 3rem;
+                padding: 1.3rem;
+                border-radius: 1rem;
+                margin-bottom: 1rem;
+            }
+            h4 {
+                font-size: 2.4rem;
+                padding: 1rem 0;
+                font-weight: 500;
+            }
+        }
+        div:nth-child(1) {
+            i {
+                background-color: #5142fb;
+            }
+        }
+        div:nth-child(2) {
+            i {
+                background-color: #74c000;
+                ;
+            }
+        }
+        div:nth-child(3) {
+            i {
+                background-color: purple;
+            }
+        }
+        div:nth-child(4) {
+            i {
+                background-color: orangered;
+            }
+        }
+    }
+    section#live-action {
+        background-color: #040505b3;
+        padding: 2rem 0;
+        .live-auction-bar {
+            width: $width;
+            margin: 3rem auto;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-content: space-between;
+            justify-content: center;
+            align-items: center;
+            .live-control {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                align-items: center;
+                justify-content: space-between;
+                align-content: center;
+                width: 100%;
+                color: white;
+                padding: 0 0 2rem;
+                h3 {
+                    font-size: 4rem;
+                    font-weight: 500;
+                }
+                h5 {
+                    text-transform: uppercase;
+                    font-size: 1.9rem;
+                    border-bottom: 2px solid;
+                    border-image-slice: 1;
+                    border-width: 2px;
+                    border-image-source: linear-gradient(135deg, #C56CD6 0%, #3425AF 100%);
+                    font-weight: 400;
+                }
+            }
+            .live-cards {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                align-items: center;
+                align-content: center;
+                .cards {
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    flex-wrap: nowrap;
+                    align-items: center;
+                    justify-content: space-around;
+                    align-items: center;
+                    background: #343444;
+                    padding: 2rem;
+                    border-radius: 2rem;
+                    margin: 0 0.8rem;
+                    >img {
+                        border-radius: 2rem;
+                    }
+                    .timer {
+                        display: flex;
+                        position: absolute;
+                        width: 48%;
+                        padding: 0.5rem;
+                        background-color: #343444;
+                        border-radius: 1rem;
+                        color: white;
+                        flex-direction: row;
+                        flex-wrap: nowrap;
+                        align-items: center;
+                        justify-content: space-evenly;
+                        align-content: center;
+                        font-size: 1.4rem;
+                        i {
+                            color: #f44336;
+                        }
+                    }
+                    .place-bid {
+                        background-color: white;
+                        padding: 0.6rem 3rem;
+                        font-size: 1.6rem;
+                        border-radius: 1rem;
+                        position: absolute;
+                        top: 90px;
+                        opacity: 0;
+                        visibility: hidden;
+                        transition: all 1s;
+                        i {
+                            color: #5142fb
+                        }
+                    }
+                    h3 {
+                        color: white;
+                        padding: 2rem 0;
+                        font-size: 1.7rem;
+                        font-weight: 500;
+                    }
+                    .live-creator {
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        border-bottom: 2px solid #242431;
+                        padding: 0 0 2rem 0;
+                        >img {
+                            border-radius: 2rem;
+                            width: 25%;
+                        }
+                        .creator-info {
+                            flex-grow: 1;
+                            padding: 0 1rem;
+                            color: white;
+                            font-size: 1.4rem;
+                        }
+                        button {
+                            outline: none;
+                            background: #5142fb;
+                            border: 0;
+                            padding: 0.3rem 1rem;
+                            border-radius: 1rem;
+                            color: white;
+                            cursor: pointer;
+                        }
+                    }
+                    .current-bid {
+                        width: 100%;
+                        padding: 1rem 0;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        color: white;
+                        .bid {
+                            p {
+                                font-size: 1.6rem;
+                                font-weight: 200;
+                            }
+                            h4 {
+                                font-size: 2rem;
+                                span {
+                                    font-weight: 200;
+                                }
+                            }
+                        }
+                        button {
+                            background-color: #14141f;
+                            outline: 0;
+                            border: 0;
+                            color: white;
+                            padding: 1rem;
+                            border-radius: 1rem;
+                            cursor: pointer;
+                        }
+                    }
+                }
+                .cards:hover {
+                    .place-bid {
+                        opacity: 1;
+                        visibility: visible;
+                        top: 160px;
+                        transition: all 1s;
+                    }
                 }
             }
         }
