--- a/style.scss
+++ b/style.scss
@@ -350,4 +350,121 @@ main {
             }
         }
     }
+    section#popular {
+        background-color: #14141f;
+        .popular-section {
+            width: $width;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-items: center;
+            justify-content: space-between;
+            align-content: center;
+            padding: 3rem 0;
+            color: white;
+            .popular-bar {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                flex-direction: row;
+                align-items: center;
+                align-content: center;
+                padding: 3rem 0;
+                h3 {
+                    font-size: 4rem;
+                    font-weight: 500;
+                }
+                h5 {
+                    text-transform: uppercase;
+                    font-size: 1.9rem;
+                    border-bottom: 2px solid;
+                    border-image-slice: 1;
+                    border-width: 2px;
+                    border-image-source: linear-gradient(135deg, #C56CD6 0%, #3425AF 100%);
+                    font-weight: 400;
+                }
+            }
+            .popular-cards {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                align-items: center;
+                justify-content: center;
+                .cards {
+                    display: flex;
+                    flex-direction: column;
+                    flex-wrap: nowrap;
+                    align-items: center;
+                    justify-content: space-between;
+                    align-content: center;
+                    padding: 2rem;
+                    background: #343444;
+                    margin: 0 2rem;
+                    border-radius: 1rem;
+                    .popular-gallery {
+                        .top-images {
+                            display: flex;
+                            img {
+                                flex-basis: 185px;
+                                width: 20rem;
+                                padding: 0.4rem;
+                                border-radius: 1rem;
+                                padding: 0.4rem;
+                                border-radius: 1rem;
+                            }
+                        }
+                        .bottom-images {
+                            display: flex;
+                            img {
+                                width: 133px;
+                                padding: 0.4rem;
+                                border-radius: 1rem;
+                            }
+                        }
+                    }
+                    .popular-info {
+                        position: relative;
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: nowrap;
+                        align-items: center;
+                        justify-content: space-between;
+                        align-content: center;
+                        width: 100%;
+                        font-size: 1.3rem;
+                        margin: 2rem 0;
+                        img {
+                            border-radius: 2rem;
+                            width: 7rem;
+                        }
+                        >i {
+                            color: greenyellow;
+                            position: absolute;
+                            bottom: 0;
+                            left: 62px;
+                            font-size: 1.5rem;
+                        }
+                        .popular-name {
+                            flex-grow: 1;
+                            padding: 0 1rem;
+                        }
+                        p {
+                            span {
+                                font-weight: bold;
+                            }
+                        }
+                        button {
+                            border: 0;
+                            outline: 0;
+                            background: #000000b3;
+                            padding: 0.6rem 1.5rem;
+                            color: white;
+                            border-radius: 1rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
