--- a/style.scss
+++ b/style.scss
@@ -534,4 +534,214 @@ main {
             }
         }
     }
+    section#today-pick {
+        background-color: #14141f;
+        padding: 3rem 0;
+        color: white;
+        .today-pick-bar {
+            width: $width;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            align-items: center;
+            align-content: center;
+            justify-content: flex-start;
+            .today-pick-header {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                h3 {
+                    font-size: 4rem;
+                    font-weight: 500;
+                }
+                h5 {
+                    text-transform: uppercase;
+                    font-size: 1.9rem;
+                    border-bottom: 2px solid;
+                    border-image-slice: 1;
+                    border-width: 2px;
+                    border-image-source: linear-gradient(135deg, #C56CD6 0%, #3425AF 100%);
+                    font-weight: 400;
+                }
+            }
+            .today-pick-filter {
+                display: grid;
+                grid-template-columns: auto auto auto auto auto;
+                justify-content: space-between;
+                width: 100%;
+                padding: 1rem 0;
+                margin: 1rem 0;
+                .today-filter {
+                    grid-column: 1 / 5;
+                    button {
+                        outline: 0;
+                        border: 0;
+                        background: transparent;
+                        color: white;
+                        padding: 0.4rem 1rem;
+                        font-size: 2rem;
+                        font-family: inherit;
+                        border: 1px solid #737282;
+                        border-radius: 3rem;
+                        padding: 0.8rem 1rem;
+                        margin: 0 0.5rem;
+                    }
+                    button:first-child {
+                        margin: 0 0.5rem 0 0;
+                    }
+                    i {
+                        padding-right: 0.3rem;
+                    }
+                }
+                .today-sort {
+                    button {
+                        outline: 0;
+                        border: 0;
+                        background: transparent;
+                        color: white;
+                        padding: 0.4rem 1rem;
+                        font-size: 2rem;
+                        font-family: inherit;
+                        border: 1px solid #737282;
+                        border-radius: 3rem;
+                        padding: 0.8rem 1rem;
+                        i {
+                            padding-right: 1rem;
+                        }
+                    }
+                }
+            }
+            .today-pick-card {
+                display: grid;
+                grid-template-columns: auto auto auto auto;
+                .cards {
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    flex-wrap: nowrap;
+                    align-items: center;
+                    justify-content: space-around;
+                    align-items: center;
+                    background: #343444;
+                    padding: 2rem;
+                    border-radius: 2rem;
+                    margin: 0 0.8rem 1rem 0;
+                    padding: 1.5rem;
+                    >img {
+                        border-radius: 2rem;
+                    }
+                    >span {
+                        padding: 0.6rem 1rem;
+                        background-color: #000000c7;
+                        border-radius: 1rem;
+                        position: absolute;
+                        top: 4rem;
+                        right: 4rem;
+                        font-size: 1.4rem;
+                    }
+                    .timer {
+                        display: flex;
+                        position: absolute;
+                        width: 48%;
+                        padding: 0.5rem;
+                        background-color: #343444;
+                        border-radius: 1rem;
+                        color: white;
+                        flex-direction: row;
+                        flex-wrap: nowrap;
+                        align-items: center;
+                        justify-content: space-evenly;
+                        align-content: center;
+                        font-size: 1.4rem;
+                        i {
+                            color: #f44336;
+                        }
+                    }
+                    .place-bid {
+                        background-color: white;
+                        padding: 0.6rem 3rem;
+                        font-size: 1.6rem;
+                        border-radius: 1rem;
+                        position: absolute;
+                        top: 90px;
+                        opacity: 0;
+                        visibility: hidden;
+                        transition: all 1s;
+                        i {
+                            color: #5142fb
+                        }
+                    }
+                    h3 {
+                        color: white;
+                        padding: 2rem 0;
+                        font-size: 1.7rem;
+                        font-weight: 500;
+                    }
+                    .live-creator {
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        border-bottom: 2px solid #242431;
+                        padding: 0 0 2rem 0;
+                        >img {
+                            border-radius: 2rem;
+                            width: 25%;
+                        }
+                        .creator-info {
+                            flex-grow: 1;
+                            padding: 0 1rem;
+                            color: white;
+                            font-size: 1.4rem;
+                        }
+                        button {
+                            outline: none;
+                            background: #5142fb;
+                            border: 0;
+                            padding: 0.3rem 1rem;
+                            border-radius: 1rem;
+                            color: white;
+                            cursor: pointer;
+                        }
+                    }
+                    .current-bid {
+                        width: 100%;
+                        padding: 1rem 0;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        color: white;
+                        .bid {
+                            p {
+                                font-size: 1.6rem;
+                                font-weight: 200;
+                            }
+                            h4 {
+                                font-size: 1.6rem;
+                                span {
+                                    font-weight: 200;
+                                }
+                            }
+                        }
+                        button {
+                            font-size: 1.6rem;
+                            font-family: inherit;
+                            background-color: inherit;
+                            outline: 0;
+                            border: 0;
+                            color: white;
+                            padding: 1rem;
+                            border-radius: 1rem;
+                            cursor: pointer;
+                            i {
+                                padding-right: 0.4rem;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
