--- a/style.scss
+++ b/style.scss
@@ -156,7 +156,7 @@ main {
             align-content: center;
             justify-content: center;
             align-items: center;
-            padding: 0 1rem;
+            padding: 1rem;
             p {
                 text-align: center;
                 font-weight: 200;
@@ -174,6 +174,10 @@ main {
                 padding: 1rem 0;
                 font-weight: 500;
             }
+        }
+        div:hover {
+            box-shadow: 0 0 1rem blue;
+            border-radius: 1rem;
         }
         div:nth-child(1) {
             i {
@@ -241,6 +245,7 @@ main {
                 align-items: center;
                 align-content: center;
                 .cards {
+                    transition: all 1s ease-in;
                     position: relative;
                     display: flex;
                     flex-direction: column;
@@ -248,7 +253,7 @@ main {
                     align-items: center;
                     justify-content: space-around;
                     align-items: center;
-                    background: #343444;
+                    background-color: #343444;
                     padding: 2rem;
                     border-radius: 2rem;
                     margin: 0 0.8rem;
@@ -256,10 +261,12 @@ main {
                         border-radius: 2rem;
                         width: 26rem;
                         margin: 0 auto;
+                        transition: all 1s;
                     }
                     .timer {
                         display: flex;
                         position: absolute;
+                        transition: all 1s;
                         width: 48%;
                         padding: 0.5rem;
                         background-color: #343444;
@@ -353,6 +360,8 @@ main {
                     }
                 }
                 .cards:hover {
+                    transition: background-color 1s ease;
+                    background-color: #4568DC;
                     .place-bid {
                         opacity: 1;
                         visibility: visible;
@@ -477,6 +486,9 @@ main {
                         }
                     }
                 }
+                .cards:hover {
+                    background-color: #093028;
+                }
             }
         }
     }
@@ -512,6 +524,7 @@ main {
                     align-items: center;
                     justify-content: flex-start;
                     padding: 1.5rem 0;
+                    width: 100%;
                     img {
                         border-radius: 4rem;
                         width: 10rem;
